--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,16 @@ ul {
     width: 100%;
 }
 
+.carousel-item-dos{
+    height: 426px;
+    width: 100%;
+}
+
+.carousel-item-tres{
+    height: 426px;
+    width: 100%;
+}
+
 /* titulo */
 
 .productos {
@@ -87,6 +97,11 @@ ul {
     color: #8c8c8c;
     margin-bottom: 20px;
     margin-top: 20px;
+}
+
+.productos:hover{
+    color:#eebb99;
+    text-decoration: underline;
 }
 
 /* productos */
@@ -99,7 +114,7 @@ ul {
 
 .contenedorProductos .producto {
     width: 12rem;
-    height: 18rem;
+    height: 19rem;
     padding: 1rem;
     background-color: #8c8c8c;
     border-radius: 20px;
@@ -140,8 +155,9 @@ ul {
 
 .contenedorServicios {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
+    margin-bottom: 10px;
+
 }
 
 .contenedorServicios .servicio {
@@ -234,14 +250,12 @@ ul {
 /* footer */
 
 .footer {
-    background-color: #8c8c8c;
     width: 100%;
 }
 
-
 .txtFooter {
     text-align: center;
-    color: white;
+    color:#8c8c8c;
     margin-bottom: 30px;
     padding: 30px;
 }
@@ -268,6 +282,9 @@ ul {
     color: #8c8c8c;
     margin-bottom: 20px;
     margin-top: 20px;
+    animation-name: titulo;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 }
 
 .imgColeccion {
@@ -294,6 +311,9 @@ ul {
     color: #8c8c8c;
     margin-bottom: 20px;
     margin-top: 20px;
+    animation-name: titulo;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 }
 
 .imgAccesorio {
@@ -319,6 +339,9 @@ ul {
     color: #8c8c8c;
     margin-bottom: 20px;
     margin-top: 20px;
+    animation-name: titulo;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 }
 
 .imgCalzado {
@@ -344,6 +367,9 @@ ul {
     color: #8c8c8c;
     margin-bottom: 20px;
     margin-top: 20px;
+    animation-name: titulo;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 }
 
 .contContacto {
@@ -373,6 +399,7 @@ ul {
     padding: 20px;
     grid-gap: 10px
 }
+
 
 .grid-containerAccesorios {
     display: grid;
@@ -407,22 +434,40 @@ ul {
     }
 }
 
+@keyframes titulo {
+    0% {
+        color: #f7c6af;
+    }
+    25% {
+        color: #8c8c8c
+    }
+    50% {
+        color: #f7c6af;
+    }
+    75%{
+        color: #8c8c8c;
+    }
+    100% {
+        color: #f7c6af;
+    }
+}
+
 
 /* mediaquerys */
 /* mobile first */
-@media (max-width: 980px){
-   .navBar {
-    flex-direction: column;
-   }
 
-   .list {
-    flex-direction: column;
-   }
+@media (max-width: 980px){
 
    .contImgVentas {
     width: 200px;
    }
 
+}
+
+@media (max-width: 580px){
+    .contenedorServicios {
+        display: none;
+    }
 }
 
 @media (max-width: 1250px) {
