--- a/css/backup.css
+++ b/css/backup.css
@@ -27,21 +27,12 @@ ul {
     align-items: center;
 } 
 
-.logo:hover {
-    transform: skew(10deg);
-}
-
 .navBar {
-    background-color: white;
-    /* background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5d0 100%); */
-    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    background-color:#e9e9e7;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px;
-    animation-name: navBar;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
 }
 
 .navBar .list {
@@ -68,6 +59,8 @@ ul {
     color: #8c8c8c;
     font-size: 15px;
 }
+
+/* main */
 
 .main {
     width: 100%;
@@ -412,23 +405,6 @@ ul {
 }
 
 /* Keyframes */
-
-@keyframes navBar {
-     
-    0% {
-        background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-    }
-
-    100% {
-        /*background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);*/
-        /* background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%); */
-        background-image: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
-        /* background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
- background-blend-mode: normal,color-burn; */
- /* background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%); */
- /* background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%); */
-    }
-}
 
 @keyframes titulo {
     0% {
