--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,408 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700&family=Syne:wght@400;700;800&display=swap");
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif !important;
+}
+
+/* pagina principal */
+/* menu */
+/* BEM */
+.header {
+  position: sticky;
+  top: 0;
+  align-items: center;
+}
+.header__nav {
+  background-color: #e7e7e7 !important;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px !important;
+}
+.header__ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.header__logo {
+  margin-left: 1rem;
+}
+.header__link {
+  color: #8c8c8c !important;
+  font-size: 20px !important;
+  text-decoration: none;
+  font-weight: 500;
+  margin: 15px !important;
+}
+.header__link--active {
+  font-weight: 900;
+}
+.header a:hover {
+  color: #eebb99 !important;
+  font-weight: 900 !important;
+}
+
+/* main */
+main {
+  width: 100%;
+}
+
+/* productos */
+main .productos {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+main .productos:hover {
+  color: #eebb99;
+  text-decoration: underline;
+}
+main .contenedorProductos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+div .producto {
+  width: 12rem;
+  height: 19rem;
+  padding: 1rem;
+  background-color: #8c8c8c;
+  border-radius: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+div .imgProducto {
+  width: 100%;
+  border-radius: 10px;
+}
+div .tituloProducto {
+  color: #eebb99;
+  font-family: Georgia, "Times New Roman", Times, serif !important;
+  font-size: 25px;
+  text-align: center;
+}
+div .contBtnProducto {
+  width: 100%;
+}
+div .btnElegir {
+  font-family: "Syne", sans-serif !important;
+  font-size: 15px;
+  font-weight: bolder;
+  color: #eebb99;
+  background-color: white;
+  border: 0;
+  width: 100%;
+  height: 25px;
+  border-radius: 25px;
+}
+
+/* servicios */
+main .contenedorServicios {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+
+div .servicio {
+  width: 15rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+div .imgServicio {
+  width: 100%;
+}
+div .contTexServicio {
+  font-size: 15px;
+  text-align: center;
+  margin-top: 10px;
+}
+div .contInfoServicio {
+  text-align: center;
+  margin-top: 7px;
+}
+div .btnElegir:hover {
+  background-color: #eebb99;
+  color: #8c8c8c;
+}
+
+/* combos */
+main .combos {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin: 30px;
+}
+main .contCombos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 10px;
+  margin-bottom: 10px;
+}
+
+div .contImgCombos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 2px;
+  margin-bottom: 10px;
+  align-items: center;
+  border-radius: 20px;
+}
+
+/* ventas */
+main .ventas {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin: 40px;
+}
+main .contVentas {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 10px;
+  margin-bottom: 10px;
+}
+
+div .contImgVentas {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 2px;
+  margin-bottom: 10px;
+  align-items: center;
+  border-radius: 20px;
+}
+
+/* Banner Local */
+.bannerLocal {
+  width: 100%;
+}
+
+/* footer */
+footer .txtFooter {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 30px;
+  padding: 30px;
+}
+footer .listFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  list-style: none;
+}
+
+/* pagina coleccion */
+/* banner */
+main .bannerColeccion {
+  width: 100%;
+}
+
+/* contenido */
+main .coleccion {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  animation-name: titulo;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+main .imgColeccion {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 20px !important;
+  justify-content: space-around;
+  margin: 2px;
+  padding: 2px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+main .grid-containerColeccion {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  padding: 20px;
+  grid-gap: 10px;
+}
+
+/* pagina accesorios */
+/* banner */
+main .bannerAccesorios {
+  width: 100%;
+}
+
+/* Contenido */
+main .accesorios {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  animation-name: titulo;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+main .imgAccesorio {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 20px;
+  justify-content: space-around;
+  margin: 2px;
+  padding: 2px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+main .grid-containerAccesorios {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  padding: 20px;
+  grid-gap: 10px;
+}
+
+/* pagina calzados */
+/* banner */
+main .bannerCalzados {
+  width: 100%;
+}
+
+/* Contenido */
+main .calzados {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  animation-name: titulo;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+main .imgCalzado {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 20px;
+  justify-content: space-around;
+  margin: 2px;
+  padding: 2px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+main .grid-containerCalzados {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+  grid-gap: 20px;
+}
+
+/* pagina contacto */
+/* banner */
+main .bannerContacto {
+  width: 100%;
+}
+
+main .contacto {
+  text-align: center;
+  color: #8c8c8c;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  animation-name: titulo;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+main .contContacto {
+  padding: 5px;
+  margin: 5px;
+}
+main .contContacto input:hover {
+  border-radius: 5px;
+  background-color: #eebb99;
+  color: black;
+}
+main .contContacto textarea:hover {
+  border-radius: 10px;
+  background-color: #eebb99;
+  color: black;
+  transition: 1s;
+}
+main .form-check-input {
+  background-color: #eebb99;
+}
+main .btn {
+  background-color: #eebb99;
+  color: black;
+  padding: 5px;
+  margin: 5px;
+}
+main .btn:hover {
+  background-color: #8c8c8c;
+}
+
+/* Keyframes */
+@keyframes titulo {
+  0% {
+    color: #eebb99;
+  }
+  25% {
+    color: #8c8c8c;
+  }
+  50% {
+    color: #eebb99;
+  }
+  75% {
+    color: #8c8c8c;
+  }
+  100% {
+    color: #eebb99;
+  }
+}
+/* mediaquerys */
+/* mobile first */
+@media (max-width: 980px) {
+  div .contImgVentas {
+    width: 200px;
+  }
+}
+@media (max-width: 580px) {
+  main .contenedorServicios {
+    display: none;
+  }
+}
+@media (max-width: 1250px) {
+  main .grid-containerColeccion {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 1000px) {
+  main .grid-containerColeccion {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 1250px) {
+  main .grid-containerAccesorios {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 950px) {
+  main .grid-containerAccesorios {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 900px) {
+  main .grid-containerCalzados {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
