--- a/scss/base/_estilosgenerales.scss
+++ b/scss/base/_estilosgenerales.scss
@@ -3,6 +3,8 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700&family=Syne:wght@400;700;800&display=swap');
+
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', sans-serif !important;
 }
