--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,10 +1,453 @@
+
 /* pagina principal */
 /* menu */
 
-header {
-    .header {
+/* BEM */
+.header {
+
         position: sticky;
         top: 0;
         align-items: center;
+    
+        &__nav {
+            background-color: $fondoHeader!important; 
+            display: $flexBox;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px !important;  
+        }
+
+        &__ul {
+            display: $flexBox;
+            flex-wrap: wrap;
+        }
+
+        &__logo {
+            margin-left: 1rem;
+        }
+
+        &__link {
+                color: $colorPrincipal !important;
+                font-size: 20px !important;
+                text-decoration: none;
+                font-weight: 500;
+                margin: 15px !important;
+
+                &--active{
+                    font-weight: 900;
+                }
+        }
+
+        a:hover {
+            color: $segundoColor !important;
+            font-weight: 900 !important;
+        }
+
+}
+
+
+/* main */
+main {
+    
+    width: 100%;
+
+}
+
+
+/* productos */
+main {
+    .productos {
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+    .productos:hover{
+        color: $segundoColor;
+        text-decoration: underline;
+    }
+
+    .contenedorProductos {
+        display: $flexBox ;
+        flex-wrap: wrap ;
+        justify-content: space-around ;
+    }
+}
+
+div {
+
+    .producto {
+        width: 12rem;
+        height: 19rem;
+        padding: 1rem;
+        background-color: $colorPrincipal;
+        border-radius: 20px;
+        margin-bottom: 30px;
+        display: $flexBox;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .imgProducto {
+        width: 100%;
+        border-radius: 10px;
+    }
+
+    .tituloProducto {
+        color: $segundoColor;
+        font-family: Georgia, 'Times New Roman', Times, serif !important;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .contBtnProducto {
+        width: 100%;
+    }
+
+    .btnElegir { 
+        font-family: 'Syne', sans-serif !important;
+        font-size: 15px;
+        font-weight: bolder;
+        color: $segundoColor;
+        background-color: white;
+        border: 0;
+        width: 100%;
+        height: 25px;
+        border-radius: 25px;
+    }
+
+}
+
+
+/* servicios */
+main {
+
+    .contenedorServicios {
+        display: $flexBox;
+        justify-content: space-around;
+        margin-bottom: 10px;
+    
+    }
+}
+ 
+div {
+
+    .servicio {
+        width: 15rem;
+        padding: 2rem;
+        display: $flexBox;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .imgServicio {
+        width: 100%;
+    }
+
+    .contTexServicio {
+        font-size: 15px;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .contInfoServicio {
+        text-align: center;
+        margin-top: 7px;
+    }
+
+    .btnElegir:hover{
+        background-color: $segundoColor;
+        color: $colorPrincipal;
+    }
+}
+
+
+/* combos */
+main {
+
+    .combos {
+            text-align: center;
+            color: $colorPrincipal;
+            margin-bottom: 20px;
+            margin: 30px;
+    }
+    
+
+    .contCombos {
+        display: $flexBox;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+div {
+    .contImgCombos{
+        display: $flexBox;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 2px;
+        margin-bottom: 10px;
+        align-items:center;
+        border-radius: 20px;
+    }
+}
+
+
+/* ventas */
+main {
+
+    .ventas {
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 20px;
+        margin: 40px;
+    }
+
+
+    .contVentas {
+        display: $flexBox;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 10px;
+        margin-bottom: 10px;
+        }    
+}
+
+div {
+    .contImgVentas{
+        display: $flexBox;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 2px;
+        margin-bottom: 10px;
+        align-items:center;
+        border-radius: 20px;
+    }
+}
+
+/* Banner Local */
+.bannerLocal {
+    width: 100%;
+}
+
+
+/* footer */
+footer {
+
+    .txtFooter {
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 30px;
+        padding: 30px;
+    }
+
+    .listFooter {
+        display: $flexBox;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        list-style: none;
+    }
+}
+
+
+/* pagina coleccion */
+/* banner */
+
+main {
+    .bannerColeccion {
+        width: 100%;
+    }
+}
+
+/* contenido */
+main {
+
+    .coleccion { 
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        animation-name: titulo;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+    }
+
+    .imgColeccion {
+        width: 100%;
+        display: $flexBox;
+        flex-wrap: wrap;
+        border-radius: 20px !important;
+        justify-content: space-around;
+        margin: 2px;
+        padding: 2px;
+        margin-bottom: 10px;
+        align-items:center;
+    }
+
+    .grid-containerColeccion {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        padding: 20px;
+        grid-gap: 10px
+    }
+}
+
+
+/* pagina accesorios */
+ /* banner */
+ main {
+    .bannerAccesorios {
+        width: 100%;
+    }
+}
+
+/* Contenido */ 
+main {
+    .accesorios {
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        animation-name: titulo;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+    }
+    
+    .imgAccesorio {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        border-radius: 20px;
+        justify-content: space-around;
+        margin: 2px;
+        padding: 2px;
+        margin-bottom: 10px;
+        align-items:center;
+    }
+
+    .grid-containerAccesorios {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        padding: 20px;
+        grid-gap: 10px
+    }
+}
+
+
+/* pagina calzados */
+ /* banner */
+main {
+    .bannerCalzados {
+        width: 100%;
+    }
+}
+
+/* Contenido */
+main {
+    .calzados {
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        animation-name: titulo;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+    }
+    
+    .imgCalzado {
+        width: 100%;
+        display: $flexBox;
+        flex-wrap: wrap;
+        border-radius: 20px;
+        justify-content: space-around;
+        margin: 2px;
+        padding: 2px;
+        margin-bottom: 10px;
+        align-items:center;
+    }
+
+    .grid-containerCalzados{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 20px;
+        grid-gap: 20px
+    }    
+}
+
+/* pagina contacto */
+/* banner */
+main {
+    .bannerContacto {
+        width: 100%;
+    }
+}
+
+main {
+    .contacto {
+        text-align: center;
+        color: $colorPrincipal;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        animation-name: titulo;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+    }
+
+    .contContacto{
+        padding: 5px;
+        margin: 5px;
+    }
+
+    .contContacto input:hover{
+        border-radius: 5px;
+        background-color: $segundoColor ;
+        color: black;
+    }
+    
+    .contContacto textarea:hover{
+        border-radius: 10px;
+        background-color: $segundoColor;
+        color: black;
+        transition: 1s;
+    }
+
+    .form-check-input{
+        background-color: $segundoColor;
+    }
+
+    .btn {
+        background-color: #eebb99;
+        color: black;
+        padding: 5px;
+        margin: 5px;
+    }
+
+    .btn:hover {
+        background-color: #8c8c8c;
+    }
+}
+
+
+/* Keyframes */
+
+@keyframes titulo {
+    0% {
+        color: $segundoColor;
+    }
+    25% {
+        color: $colorPrincipal;
+    }
+    50% {
+        color: $segundoColor;
+    }
+    75%{
+        color: $colorPrincipal;
+    }
+    100% {
+        color: $segundoColor;
     }
 }
