--- a/scss/index.scss
+++ b/scss/index.scss
@@ -57,10 +57,7 @@ main {
 /* productos */
 main {
     .productos {
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 20px;
-        margin-top: 20px;
+        @extend %estiloTitulo;
     }
 
     .productos:hover{
@@ -95,10 +92,7 @@ div {
     }
 
     .tituloProducto {
-        color: $segundoColor;
-        font-family: Georgia, 'Times New Roman', Times, serif !important;
-        font-size: 25px;
-        text-align: center;
+        @extend %estiloProducto;
     }
 
     .contBtnProducto {
@@ -143,6 +137,7 @@ div {
 
     .imgServicio {
         width: 100%;
+        margin-top: 30px;
     }
 
     .contTexServicio {
@@ -162,15 +157,73 @@ div {
     }
 }
 
+/* ofertas */
+main {
+    .combosOfertas {
+        @extend %estiloOfertas;
+     }
+}
+
+/* Secciones */
+.contenedorSecciones{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0px !important;
+}
+
+div {
+
+    h3 {
+        color: #8c8c8c;
+    }
+
+    .content {
+        width: 12rem;
+        height: 19rem;
+        margin: 70px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+    }
+    
+    .content img {
+        width: 300px;
+    }
+    
+    .content:hover {
+        border: 5px solid transparent;
+        border-radius: 2px;
+    }
+    
+    .info{
+        text-align: center;
+        padding: 10px;
+    }
+    
+    .boton {
+        color: #8c8c8c !important;
+    }
+    
+    .boton-dos {
+        background-color:#f7c6af;
+    
+    }
+}
+
+
+/* Banner Local */
+.bannerLocal {
+    width: 100%;
+}
+
 
 /* combos */
 main {
 
     .combos {
-            text-align: center;
-            color: $colorPrincipal;
-            margin-bottom: 20px;
-            margin: 30px;
+            @extend %estiloCombos;
     }
     
 
@@ -200,10 +253,7 @@ div {
 main {
 
     .ventas {
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 20px;
-        margin: 40px;
+        @extend %estiloVentas;
     }
 
 
@@ -228,28 +278,74 @@ div {
     }
 }
 
-/* Banner Local */
-.bannerLocal {
-    width: 100%;
-}
-
 
 /* footer */
 footer {
 
-    .txtFooter {
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 30px;
-        padding: 30px;
-    }
+    width: 100%;
+    padding: 50px 0px ;
+    background-image: url(../img/footer_background.svg);
+    background-size: cover;
 
-    .listFooter {
-        display: $flexBox;
+    .container__footer {
+        display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
-        align-items: center;
+        max-width: 1200px;
+        margin: auto;
+        margin-top: 100px;
+    }
+    
+    .box__footer {
+        display: flex;
+        flex-direction: column !important;
         padding: 10px;
-        list-style: none;
+    }
+    
+    .categorias{
+        color:#eebb99;
+    }
+    
+    .redes {
+        padding: 5px;
+    }
+    
+    .box__footer h2 {
+        margin-bottom: 30px;
+        color: $colorPrincipal;
+        font-weight: 500;
+    }
+    
+    .box__footer a {
+        margin-bottom: 10px;
+        font-weight: 500;
+        color: $segundoColor;
+    }
+    
+    .box__footer a:hover {
+        color: $colorPrincipal;
+    }
+    
+    .categorias:hover {
+        color: $colorPrincipal;
+    }
+    
+    .box__copyright {
+        max-width: 1200px;
+        margin: auto;
+        text-align: center;
+        padding: 0px 40px;
+    }
+    
+    .box__copyright p {
+        margin-top: 20px;
+        color: #7a7a7a;
+    }
+    
+    .box__copyright hr {
+        border: none;
+        height: 1px;
+        background-color: #7a7a7a;
     }
 }
 
@@ -266,34 +362,72 @@ main {
 /* contenido */
 main {
 
-    .coleccion { 
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        animation-name: titulo;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
+    .combosOfertas {
+        @extend %estiloOfertas;
     }
+
+    .cardUno {
+        margin: 10px;
+        border-radius: 10px;
+        padding: 5px;
+        margin: 10px 20px !important;
+        box-shadow: 0 4px 8px 0 lightblue 0 6px 20px 0px black !important;
+        float: left !important;
+        text-align: center;
+}
+
+    .cardUno:hover{
+        border: 2px solid $colorPrincipal;
+        background-color: $fondoHeader;
+
+}
+
+    .card-title {
+        padding: 2px;
+        margin: 5px;
+        font-size: 18px;
+        color: $colorPrincipal;
+}
+
+    .card-num {
+        color: $colorPrincipal;
+        font-size: 18px;
+        margin: 5px;
+}
+
+    .card-text {
+        padding: 2px;
+        margin: 5px;
+        font-size: 15px;
+}
+
+    .card-img-top{
+        border-radius: 10px;
+}
+
+    .boton {
+        font-size: 15px;
+}
+
+    .btn-primaryDos {
+        color: $colorPrincipal !important;
+}
+
+    .coleccion { 
+        @extend %estiloTitulos;
+}
 
     .imgColeccion {
         width: 100%;
-        display: $flexBox;
+        display: flex;
         flex-wrap: wrap;
-        border-radius: 20px !important;
+        border-radius: 20px;
         justify-content: space-around;
         margin: 2px;
         padding: 2px;
         margin-bottom: 10px;
         align-items:center;
-    }
-
-    .grid-containerColeccion {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        padding: 20px;
-        grid-gap: 10px
-    }
+}
 }
 
 
@@ -308,13 +442,7 @@ main {
 /* Contenido */ 
 main {
     .accesorios {
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        animation-name: titulo;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
+        @extend %estiloTitulos;
     }
     
     .imgAccesorio {
@@ -329,12 +457,52 @@ main {
         align-items:center;
     }
 
-    .grid-containerAccesorios {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        padding: 20px;
-        grid-gap: 10px
-    }
+    .cardUno {
+        margin: 10px;
+        border-radius: 10px;
+        padding: 5px;
+        margin: 10px 20px !important;
+        box-shadow: 0 4px 8px 0 lightblue 0 6px 20px 0px black !important;
+        float: left !important;
+        text-align: center;
+}
+
+    .cardUno:hover{
+        border: 2px solid $colorPrincipal;
+        background-color: $fondoHeader;
+
+}
+
+    .card-title {
+        padding: 2px;
+        margin: 5px;
+        font-size: 18px;
+        color: $colorPrincipal;
+}
+
+    .card-num {
+        color: $colorPrincipal;
+        font-size: 18px;
+        margin: 5px;
+}
+
+    .card-text {
+        padding: 2px;
+        margin: 5px;
+        font-size: 15px;
+}
+
+    .card-img-top{
+        border-radius: 10px;
+}
+
+    .boton {
+        font-size: 15px;
+}
+
+    .btn-primaryDos {
+        color: $colorPrincipal !important;
+}
 }
 
 
@@ -349,13 +517,7 @@ main {
 /* Contenido */
 main {
     .calzados {
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        animation-name: titulo;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
+        @extend %estiloTitulos;
     }
     
     .imgCalzado {
@@ -388,13 +550,7 @@ main {
 
 main {
     .contacto {
-        text-align: center;
-        color: $colorPrincipal;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        animation-name: titulo;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
+        @extend %estiloTitulos;
     }
 
     .contContacto{
@@ -420,14 +576,14 @@ main {
     }
 
     .btn {
-        background-color: #eebb99;
+        background-color: $segundoColor;
         color: black;
         padding: 5px;
         margin: 5px;
     }
 
     .btn:hover {
-        background-color: #8c8c8c;
+        background-color: $colorPrincipal;
     }
 }
 
