--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ main .ventas {
   margin: 60px;
 }
 
-main .contacto, main .calzados, main .accesorios, main .coleccion {
+main .calzados, main .accesorios, main .coleccion {
   text-align: center;
   color: #8c8c8c;
   margin-bottom: 20px;
@@ -351,7 +351,7 @@ main .boton {
   font-size: 15px;
 }
 main .btn-primaryDos {
-  color: #8c8c8c !important;
+  color: #8c8c8c;
 }
 main .imgColeccion {
   width: 100%;
@@ -453,32 +453,70 @@ main .bannerContacto {
   width: 100%;
 }
 
+main .contactoForm {
+  color: #eebb99;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 main .contContacto {
-  padding: 5px;
-  margin: 5px;
-}
-main .contContacto input:hover {
-  border-radius: 5px;
-  background-color: #eebb99;
-  color: black;
-}
-main .contContacto textarea:hover {
-  border-radius: 10px;
-  background-color: #eebb99;
-  color: black;
-  transition: 1s;
-}
-main .form-check-input {
-  background-color: #eebb99;
-}
-main .btn {
-  background-color: #eebb99;
-  color: black;
-  padding: 5px;
-  margin: 5px;
-}
-main .btn:hover {
   background-color: #8c8c8c;
+  color: white;
+  margin: 10rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  padding: 1.5em;
+  box-shadow: 0 0 20px 0 black;
+  border-radius: 10px;
+}
+main .contact-form form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 5px;
+}
+main .block {
+  grid-column: 1/3;
+}
+main .contact-form form p {
+  margin: 2px;
+  padding: 10px;
+}
+main .contact-form form input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background: none;
+  outline: 0;
+  color: #fff;
+  border-bottom: 2px solid #eebb99;
+}
+main .contact-form form textarea {
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+}
+main .contact-form form button {
+  background: #eebb99;
+  text-transform: uppercase;
+  border: 0;
+  color: #fff;
+  padding: 5px;
+}
+main .contact-form form button:hover {
+  background: #fff;
+  color: #8c8c8c;
+  outline: 0;
+}
+main .titulo-info {
+  margin-top: 5px;
+}
+main .contact-info {
+  background: #eebb99;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin: 10px;
+  padding: 10px;
 }
 
 /* Keyframes */
