--- a/scss/index.scss
+++ b/scss/index.scss
@@ -410,7 +410,7 @@ main {
 }
 
     .btn-primaryDos {
-        color: $colorPrincipal !important;
+        color: $colorPrincipal;
 }
 
     .coleccion { 
@@ -549,44 +549,83 @@ main {
 }
 
 main {
-    .contacto {
-        @extend %estiloTitulos;
+    .contactoForm {
+        color: $segundoColor;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .contContacto{
-        padding: 5px;
-        margin: 5px;
-    }
-
-    .contContacto input:hover{
-        border-radius: 5px;
-        background-color: $segundoColor ;
-        color: black;
-    }
-    
-    .contContacto textarea:hover{
-        border-radius: 10px;
-        background-color: $segundoColor;
-        color: black;
-        transition: 1s;
-    }
-
-    .form-check-input{
-        background-color: $segundoColor;
-    }
-
-    .btn {
-        background-color: $segundoColor;
-        color: black;
-        padding: 5px;
-        margin: 5px;
-    }
-
-    .btn:hover {
         background-color: $colorPrincipal;
+        color: #ffff;
+        margin: 10rem;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        padding: 1.5em;
+        box-shadow: 0 0 20px 0 rgba($color: #000000, $alpha: 1.0);
+        border-radius: 10px;
+    }
+
+
+    .contact-form form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 5px;
+    }
+
+    .block {
+        grid-column: 1 / 3 ;
+    }
+
+    .contact-form form p {
+        margin: 2px;
+        padding: 10px;
+    }
+
+    .contact-form form input {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        background: none;
+        outline: 0;
+        color: #fff;
+        border-bottom: 2px solid #eebb99;
+    }
+
+    .contact-form form textarea {
+        margin-top: 10px;
+        width: 100%;
+        padding: 10px;
+        border: none;
+        border-radius: 10px;
+    }
+
+    .contact-form form button {
+        background: $segundoColor;
+        text-transform: uppercase;
+        border: 0;
+        color: #fff;
+        padding: 5px;
+    }
+
+    .contact-form form button:hover {
+        background: #fff;
+        color: $colorPrincipal;
+        outline: 0;
+    }
+
+    .titulo-info {
+        margin-top: 5px;
+    }
+
+    .contact-info{
+        background: $segundoColor;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin: 10px;
+        padding: 10px;
     }
 }
-
 
 /* Keyframes */
 
